--- a/style.css
+++ b/style.css
@@ -3,28 +3,23 @@ body {
 }
 
 header {
-    background-color:#2E2E2E;
+    background-color:#161A21;
 }    
 
 .sommaire {
-    font-variant: small-caps;
-    font-family: Paytone One;
+    font-variant:small-caps;
+    font-family:Big John;
     font-size: 30px;
     text-align:center;
     padding:10px;
     margin:0px;
     color:#F2F2F2;
-    word-spacing: 80px;
-    height: 60px;
-}
-
-ul {
-    font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+    word-spacing:80px;
+    height:60px;
 }
 
 li {
     display:inline;
-    text-decoration:none;
 }
 
 a {
@@ -32,184 +27,224 @@ a {
     color:#FFFFFF;
 }
 
-p {
-    font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-}
-
-
-.blocnom {
-    background-color:#C60800;
-    padding-bottom:5%;
-    padding-top: 5%;
-    text-align:center;
-    height: 480px;
-}
-
-.bandeau1 {
+.bloc_h2 {
     background-color:#161A21;
-    height: 5px;
-    width: 20%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.olivier {
-    height: 300px;
-    width: 600px;
+    width:315px;
+    height:315px;
+    border-radius:180px;
+    text-align:center;
+    line-height:230px;
+    float:left;
+    margin-left:7%; 
 }
 
 h1 {
-    font-variant: small-caps;
-    font-family: Big John;
-    font-size: 35px;
+    font-variant:small-caps;
+    font-family:Big John;
+    font-size:35px;
     color:#161A21;
-    text-align: right;
-    padding-right: 52%; 
-}
-
-.icon1 {
-    height: 170px;
-    position: relative;
-    bottom: 120px;
-    left: 210px;   
-}
-
-.icon2 {
-    height: 49px;
-    position: relative;
-    bottom: 180px;
-    left: 195px;    
-}
-
-.icon3 {
-    height: 40px;
-    position: relative;
-    bottom: 185px;
-    right: 6px; 
-}
-
-.icon4 {
-    height: 45px;
-    position: relative;
-    bottom: 250px;
-    right: 50px; 
-}
-
-.partcursus {
-    padding-bottom: 5%;
-    padding-top: 5%;
     text-align:center;
-}
-
-.bloctxt1 {
-    padding-left:30%;
-    padding-right:5%;
-    text-align:left;
-}
-
-.bloctxt2 {
-    padding-left:30%;
-    padding-right:5%;
-    text-align:left;
-}
-
-.partexp {
-    background-color:#F0F0F0;
-    padding-bottom: 5%;
-    padding-top: 5%;
-    text-align:center;
-}
-
-.txt3 {
-    padding-left:30%;
-    padding-right:5%;
-    text-align:left;
-}
-
-.visueldp {
-    height: 300px;
-    margin: 20px 50px 30px 0px;
-    
-}
-
-.affichesonges {
-    height: 300px;
-    margin : 20px 0px 30px 0px;
-}
-
-
-.partcompétences {
-    padding-bottom: 5%;
-    padding-top: 5%;
-    text-align:center;
-}
-
-.txt4 {
-    padding-left:30%;
-    padding-right:30%;
-    text-align:left;
-}
-
-.adobeicon {
-    height: 300px;
-}
-
-.htmlicon {
-    height:140px;
-    position:relative;
-    bottom: 0px;
-}
-
-.cssicon {
-    height:147px;
-    position:relative;
-    top: 10px;
-    margin-left: 20px;
-}
-
-.parttravaux {
-    background-color:#282828;
-    height: 300px;
-    padding-bottom: 5%;
-    padding-top: 5%;
-    text-align:center;
-}
-
-.txt5 {
-    padding-left:30%;
-    padding-right:30%;
-    text-align:left;
-}
-
-.ch2 {
-    background-color:#161A21;
-    width:300px;
-    height:300px;
-    border-radius: 150px;
-    text-align: center;
-    line-height: 230px;
-    float: left;
-    margin-left: 5%;
-    margin-bottom: auto;
-    margin-top: auto;v
+    margin:0px 0px 0px 0px;
 }
 
 h2 {
     color: white;
-    font-family: Big John;
-    font-size: 35px;
+    font-family:Big John;
+    font-size:35px;
+}
+
+.bloc_h2_hobbies {
+    background-color:#F0F0F0;
+    width:315px;
+    height:315px;
+    border-radius:180px;
+    text-align:center;
+    line-height:230px;
+    float:left;
+    margin-left:7%;
+    margin-bottom:auto;
+    margin-top:auto;
+}
+
+.h2_hobbies {
+    color:#161A21;
+    
 }
 
 h3 {
-    font-family: Big John;
-    font-size: 20px;
+    font-family:Big John;
+    font-size: 30px;
+    margin-bottom:7px;
 }
 
 h4 {
-    font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-    font-weight: bold;
+    font-family:Big John;
+    font-size:25px;
+    font-weight:bold;
+    color:gray;
+    margin:0px 0px 30px 0px;
 }
 
-.travaux {
-    color:#FFFFFF;
+p {
+    font-family:Cabin;
+    font-size:18px;
+}
+
+.p_hobbies {
+    color:#F0F0F0;
+}
+
+.bloc_info {
+    background-color:#bc1e35;
+    padding-bottom:2%;
+    padding-top:1%;
+    text-align:center;
+    height:620px;
+}
+
+.olivier {
+    height:300px;
+    width:600px;
+}
+
+.bandeau {
+    background-color:#161A21;
+    height:7px;
+    width:3%;
+    margin-left:auto;
+    margin-right:auto;
+    position:relative;
+    bottom:50px;
+}
+
+.mail_icon {
+    height: 45px;
+    position: relative;
+    top: 85px;
+    right: 260px; 
+}
+
+.fb_icon {
+    height:47px;
+    position:relative;
+    top:85px;
+    left:45px;   
+}
+
+.pi_icon {
+    height:49px;
+    position:relative;
+    top:87px;
+    left:205px;    
+}
+
+.part_cursus {
+    padding-bottom:5%;
+    padding-top:5%;
+    text-align:center;
+}
+
+.bloc_bac {
+    padding-left:35%;
+    padding-right:5%;
+    text-align:left;
+}
+
+.bloc_bts {
+    padding-left:35%;
+    padding-right:5%;
+    text-align:left;
+}
+
+.part_exp {
+    background-color:#F0F0F0;
+    padding-bottom:5%;
+    padding-top:5%;
+    text-align:center;
+}
+
+.bloc_stage {
+    padding-left:35%;
+    padding-right:15%;
+    text-align:left;
+}
+
+.visuel1 {
+    height:330px;
+    margin:50px 50px 60px 0px;
+    
+}
+
+.visuel2 {
+    height:330px;
+    margin:50px 0px 60px 0px;
+}
+
+
+.part_compétences {
+    padding-bottom: 5%;
+    padding-top:5%;
+    text-align:center;
+    height:400px;
+}
+
+.bloc_compétences {
+    padding-left:35%;
+    padding-right:10%;
+    text-align:left;
+}
+
+.logiciels {
+    float:left;
+}
+
+.langages {
+    float:left;
+    margin: 75px 0px 0px 200px;
+}
+
+.adobe_icon {
+    height:300px;
+    position:relative;
+    bottom:10px;
+}
+
+.html_icon {
+    height:140px;
+    position:relative;
+    top:25px;
+}
+
+.css_icon {
+    height:147px;
+    position:relative;
+    top:34px;
+    margin-left:20px;
+}
+
+.part_hobbies {
+    background-color:#161A21;
+    height:300px;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    text-align:center;
+}
+
+
+
+
+.bloc_graphmus {
+    width:450px;
+    padding-left:9%;
+    padding-right:0%;
+    text-align:left;
+    float:left;
+}
+
+.bloc_cinésport {
+    width:450px;
+    padding-left:0%;
+    padding-right:5%;
+    text-align:left;
+    float:right;
 }
